--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                             <a href="#">일반현황</a>
                                             <ul>
                                                 <li><a href="#">설립목적</a></li>
-                                                <li><a href="#">연혁</a></li>
+                                                <li><a href="/history.html">연혁</a></li>
                                                 <li><a href="#">역할</a></li>
                                             </ul>
                                         </li>
@@ -92,9 +92,9 @@
                                 <div class="contents-menu">
                                     <ul class="inner">
                                         <li>
-                                            <a href="#">무형문화재 현황</a>
+                                            <a href="/sub1.html">무형문화재 현황</a>
                                             <ul>
-                                                <li><a href="#">전체 현황</a></li>
+                                                <li><a href="/sub1.html">전체 현황</a></li>
                                                 <li><a href="#">전통 공연·예술</a></li>
                                                 <li><a href="#">전통기술</a></li>
                                                 <li><a href="#">전통지식</a></li>
@@ -116,7 +116,7 @@
                                         <li>
                                             <a href="#">공연</a>
                                             <ul>
-                                                <li><a href="#">월간 공연 일정</a></li>
+                                                <li><a href="/sub2.html">월간 공연 일정</a></li>
                                                 <li><a href="#">년간 공연 일정</a></li>
                                             </ul>
                                         </li>
@@ -199,7 +199,7 @@
                                         <a href="#">일반현황</a>
                                         <ul>
                                             <li><a href="#">설립목적</a></li>
-                                            <li><a href="#">연혁</a></li>
+                                            <li><a href="/history.html">연혁</a></li>
                                             <li><a href="#">역할</a></li>
                                         </ul>
                                     </li>
@@ -219,9 +219,9 @@
                                 <label for="drawer-item-toggle2">무형문화재 현황</label>
                                 <ul class="drawer-contents">
                                     <li class="drawer-in-contents">
-                                        <a href="#">무형문화재 현황</a>
+                                        <a href="/sub1.html">무형문화재 현황</a>
                                         <ul>
-                                            <li><a href="#">전체 현황</a></li>
+                                            <li><a href="/sub1.html">전체 현황</a></li>
                                             <li><a href="#">전통 공연·예술</a></li>
                                             <li><a href="#">전통기술</a></li>
                                             <li><a href="#">전통지식</a></li>
@@ -240,7 +240,7 @@
                                     <li class="drawer-in-contents">
                                         <a href="#">공연</a>
                                         <ul>
-                                            <li><a href="#">월간 공연 일정</a></li>
+                                            <li><a href="/sub2.html">월간 공연 일정</a></li>
                                             <li><a href="#">년간 공연 일정</a></li>
                                         </ul>
                                     </li>
