--- a/sub1.html
+++ b/sub1.html
@@ -14,7 +14,7 @@
         <!-- 헤더 영역 -->
         <header id="header">
             <div class="inner">
-                <a href="#" class="logo">
+                <a href="/" class="logo">
                     <img
                         src="./resource/img/logo/무형문화재관리원_국_좌우.png"
                         alt="무형문화재관리원 로고"
@@ -77,7 +77,7 @@
                                             <a href="#">일반현황</a>
                                             <ul>
                                                 <li><a href="#">설립목적</a></li>
-                                                <li><a href="#">연혁</a></li>
+                                                <li><a href="/history.html">연혁</a></li>
                                                 <li><a href="#">역할</a></li>
                                             </ul>
                                         </li>
@@ -100,9 +100,9 @@
                                 <div class="contents-menu">
                                     <ul class="inner">
                                         <li>
-                                            <a href="#" class="current-page">무형문화재 현황</a>
+                                            <a href="/sub1.html" class="current-page">무형문화재 현황</a>
                                             <ul>
-                                                <li><a href="#" class="current-page">전체 현황</a></li>
+                                                <li><a href="/sub1.html" class="current-page">전체 현황</a></li>
                                                 <li><a href="#">전통 공연·예술</a></li>
                                                 <li><a href="#">전통기술</a></li>
                                                 <li><a href="#">전통지식</a></li>
@@ -124,7 +124,7 @@
                                         <li>
                                             <a href="#">공연</a>
                                             <ul>
-                                                <li><a href="#">월간 공연 일정</a></li>
+                                                <li><a href="/sub2.html">월간 공연 일정</a></li>
                                                 <li><a href="#">년간 공연 일정</a></li>
                                             </ul>
                                         </li>
@@ -207,7 +207,7 @@
                                         <a href="#">일반현황</a>
                                         <ul>
                                             <li><a href="#">설립목적</a></li>
-                                            <li><a href="#">연혁</a></li>
+                                            <li><a href="/history.html">연혁</a></li>
                                             <li><a href="#">역할</a></li>
                                         </ul>
                                     </li>
@@ -227,7 +227,7 @@
                                 <label for="drawer-item-toggle2" class="current-page">무형문화재 현황</label>
                                 <ul class="drawer-contents">
                                     <li class="drawer-in-contents">
-                                        <a href="#" class="current-page">무형문화재 현황</a>
+                                        <a href="/sub1.html" class="current-page">무형문화재 현황</a>
                                         <ul>
                                             <li><a href="#" class="current-page">전체 현황</a></li>
                                             <li><a href="#">전통 공연·예술</a></li>
@@ -248,7 +248,7 @@
                                     <li class="drawer-in-contents">
                                         <a href="#">공연</a>
                                         <ul>
-                                            <li><a href="#">월간 공연 일정</a></li>
+                                            <li><a href="/sub2.html">월간 공연 일정</a></li>
                                             <li><a href="#">년간 공연 일정</a></li>
                                         </ul>
                                     </li>
@@ -359,7 +359,7 @@
                     <label for="toggle-depth" class="toggle-depth">무형문화재 현황</label>
                     <ul class="depth-menu">
                         <li><a href="#">무형문화재관리원</a></li>
-                        <li><a href="#">무형문화재 현황</a></li>
+                        <li><a href="/sub1.html">무형문화재 현황</a></li>
                         <li><a href="#">행사 안내</a></li>
                         <li><a href="#">전승지원</a></li>
                         <li><a href="#">데이터 공개</a></li>
@@ -369,7 +369,7 @@
                     <input type="checkbox" id="toggle-depth2">
                     <label for="toggle-depth2" class="toggle-depth2">전체 현황</label>
                     <ul class="depth-menu">
-                        <li><a href="#">전체 현황</a></li>
+                        <li><a href="/sub1.html">전체 현황</a></li>
                         <li><a href="#">전통 공연·예술</a></li>
                         <li><a href="#">전통기술</a></li>
                         <li><a href="#">전통지식</a></li>
