--- a/sub2.html
+++ b/sub2.html
@@ -77,7 +77,7 @@
                                             <a href="#">일반현황</a>
                                             <ul>
                                                 <li><a href="#">설립목적</a></li>
-                                                <li><a href="#">연혁</a></li>
+                                                <li><a href="/history.html">연혁</a></li>
                                                 <li><a href="#">역할</a></li>
                                             </ul>
                                         </li>
@@ -100,9 +100,9 @@
                                 <div class="contents-menu">
                                     <ul class="inner">
                                         <li>
-                                            <a href="#">무형문화재 현황</a>
+                                            <a href="/sub1.html">무형문화재 현황</a>
                                             <ul>
-                                                <li><a href="#">전체 현황</a></li>
+                                                <li><a href="/sub1.html">전체 현황</a></li>
                                                 <li><a href="#">전통 공연·예술</a></li>
                                                 <li><a href="#">전통기술</a></li>
                                                 <li><a href="#">전통지식</a></li>
@@ -124,7 +124,7 @@
                                         <li>
                                             <a href="#" class="current-page">공연</a>
                                             <ul>
-                                                <li><a href="#" class="current-page">월간 공연 일정</a></li>
+                                                <li><a href="/sub2.html" class="current-page">월간 공연 일정</a></li>
                                                 <li><a href="#">년간 공연 일정</a></li>
                                             </ul>
                                         </li>
@@ -207,7 +207,7 @@
                                         <a href="#">일반현황</a>
                                         <ul>
                                             <li><a href="#">설립목적</a></li>
-                                            <li><a href="#">연혁</a></li>
+                                            <li><a href="/history.html">연혁</a></li>
                                             <li><a href="#">역할</a></li>
                                         </ul>
                                     </li>
@@ -229,7 +229,7 @@
                                     <li class="drawer-in-contents">
                                         <a href="#">무형문화재 현황</a>
                                         <ul>
-                                            <li><a href="#">전체 현황</a></li>
+                                            <li><a href="/sub1.html">전체 현황</a></li>
                                             <li><a href="#">전통 공연·예술</a></li>
                                             <li><a href="#">전통기술</a></li>
                                             <li><a href="#">전통지식</a></li>
@@ -248,7 +248,7 @@
                                     <li class="drawer-in-contents">
                                         <a href="#" class="current-page">공연</a>
                                         <ul>
-                                            <li><a href="#" class="current-page">월간 공연 일정</a></li>
+                                            <li><a href="/sub2.html" class="current-page">월간 공연 일정</a></li>
                                             <li><a href="#">년간 공연 일정</a></li>
                                         </ul>
                                     </li>
@@ -359,7 +359,7 @@
                     <label for="toggle-depth" class="toggle-depth">행사 안내</label>
                     <ul class="depth-menu">
                         <li><a href="#">무형문화재관리원</a></li>
-                        <li><a href="#">무형문화재 현황</a></li>
+                        <li><a href="/sub1.thml">무형문화재 현황</a></li>
                         <li><a href="#">행사 안내</a></li>
                         <li><a href="#">전승지원</a></li>
                         <li><a href="#">데이터 공개</a></li>
@@ -378,7 +378,7 @@
                     <input type="checkbox" id="toggle-depth3">
                     <label for="toggle-depth3" class="toggle-depth3">월간 공연 일정</label>
                     <ul class="depth-menu">
-                        <li><a href="#">월간 공연 일정</a></li>
+                        <li><a href="/sub2.html">월간 공연 일정</a></li>
                         <li><a href="#">년간 공연 일정</a></li>
                     </ul>
                 </ul>
