--- a/sub2.html
+++ b/sub2.html
@@ -14,7 +14,7 @@
         <!-- 헤더 영역 -->
         <header id="header">
             <div class="inner">
-                <a href="#" class="logo">
+                <a href="/" class="logo">
                     <img
                         src="./resource/img/logo/무형문화재관리원_국_좌우.png"
                         alt="무형문화재관리원 로고"
