--- a/history.html
+++ b/history.html
@@ -65,7 +65,7 @@
         <!-- 헤더 영역 -->
         <header id="header">
             <div class="inner">
-                <a href="#" class="logo">
+                <a href="/" class="logo">
                     <img
                         src="./resource/img/logo/무형문화재관리원_국_좌우.png"
                         alt="무형문화재관리원 로고"
@@ -128,7 +128,7 @@
                                             <a href="#" class="current-page">일반현황</a>
                                             <ul>
                                                 <li><a href="#">설립목적</a></li>
-                                                <li><a href="#" class="current-page">연혁</a></li>
+                                                <li><a href="/history.html" class="current-page">연혁</a></li>
                                                 <li><a href="#">역할</a></li>
                                             </ul>
                                         </li>
@@ -151,9 +151,9 @@
                                 <div class="contents-menu">
                                     <ul class="inner">
                                         <li>
-                                            <a href="#">무형문화재 현황</a>
+                                            <a href="/sub1.html">무형문화재 현황</a>
                                             <ul>
-                                                <li><a href="#">전체 현황</a></li>
+                                                <li><a href="/sub1.html">전체 현황</a></li>
                                                 <li><a href="#">전통 공연·예술</a></li>
                                                 <li><a href="#">전통기술</a></li>
                                                 <li><a href="#">전통지식</a></li>
@@ -175,7 +175,7 @@
                                         <li>
                                             <a href="#">공연</a>
                                             <ul>
-                                                <li><a href="#">월간 공연 일정</a></li>
+                                                <li><a href="/sub2.html">월간 공연 일정</a></li>
                                                 <li><a href="#">년간 공연 일정</a></li>
                                             </ul>
                                         </li>
@@ -258,7 +258,7 @@
                                         <a href="#" class="current-page">일반현황</a>
                                         <ul>
                                             <li><a href="#">설립목적</a></li>
-                                            <li><a href="#" class="current-page">연혁</a></li>
+                                            <li><a href="/history.html" class="current-page">연혁</a></li>
                                             <li><a href="#">역할</a></li>
                                         </ul>
                                     </li>
@@ -280,7 +280,7 @@
                                     <li class="drawer-in-contents">
                                         <a href="#">무형문화재 현황</a>
                                         <ul>
-                                            <li><a href="#">전체 현황</a></li>
+                                            <li><a href="/sub1.thml">전체 현황</a></li>
                                             <li><a href="#">전통 공연·예술</a></li>
                                             <li><a href="#">전통기술</a></li>
                                             <li><a href="#">전통지식</a></li>
@@ -299,7 +299,7 @@
                                     <li class="drawer-in-contents">
                                         <a href="#">공연</a>
                                         <ul>
-                                            <li><a href="#">월간 공연 일정</a></li>
+                                            <li><a href="/sub2.html">월간 공연 일정</a></li>
                                             <li><a href="#">년간 공연 일정</a></li>
                                         </ul>
                                     </li>
@@ -410,7 +410,7 @@
                     <label for="toggle-depth" class="toggle-depth">무형문화재 현황</label>
                     <ul class="depth-menu">
                         <li><a href="#">무형문화재관리원</a></li>
-                        <li><a href="#">무형문화재 현황</a></li>
+                        <li><a href="/sub1.html">무형문화재 현황</a></li>
                         <li><a href="#">행사 안내</a></li>
                         <li><a href="#">전승지원</a></li>
                         <li><a href="#">데이터 공개</a></li>
@@ -432,7 +432,7 @@
                     <label for="toggle-depth3" class="toggle-depth3">연혁</label>
                     <ul class="depth-menu">
                         <li><a href="#">설립목적</a></li>
-                        <li><a href="#">연혁</a></li>
+                        <li><a href="/history.html">연혁</a></li>
                         <li><a href="#">역할</a></li>
                     </ul>
                 </ul>
